portfolio grid on tablet bug solved

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -695,7 +695,7 @@ body {
   @media only screen and (max-width: 62em) {
     .portfolio__content {
       grid-template-columns: repeat(2, 1fr);
-      grid-template-rows: repeat(3, 1fr); } }
+      grid-template-rows: 1fr; } }
   @media only screen and (max-width: 35.9375em) {
     .portfolio__content {
       grid-template-columns: 1fr;
